[gd_scene load_steps=39 format=3 uid="uid://clp3coh5mf60x"]

[ext_resource type="Script" uid="uid://cyt1w5e4h0e4" path="res://Cenas/Player/player.gd" id="1_yjlpd"]
[ext_resource type="Texture2D" uid="uid://cd4to1qh32730" path="res://Assets/Player/Animations/knockback_animaiton.png" id="3_5akqg"]
[ext_resource type="Texture2D" uid="uid://8qj0ov3p7avy" path="res://Assets/Player/Animations/spr_player_assets.png" id="4_4o7c8"]
[ext_resource type="Script" uid="uid://chamii6y3xgja" path="res://Cenas/Player/ghost_dash_effect.gd" id="4_6ihxy"]
[ext_resource type="PackedScene" uid="uid://mcuhgoenbx6w" path="res://Cenas/Player/WearponsInfos/WearponsInfos.tscn" id="6_4o7c8"]
[ext_resource type="AudioStream" uid="uid://csl4jnmpwav2c" path="res://Assets/Sound/dash_sound.mp3" id="7_bsnao"]
[ext_resource type="PackedScene" uid="uid://df6rl28qpnweo" path="res://Cenas/LightArmor/ArmorManager/ArmorManager.tscn" id="7_xjvfg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r8ryd"]
atlas = ExtResource("4_4o7c8")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5akqg"]
atlas = ExtResource("4_4o7c8")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ihxy"]
atlas = ExtResource("4_4o7c8")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o7c8"]
atlas = ExtResource("4_4o7c8")
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynwyb"]
atlas = ExtResource("4_4o7c8")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf6lm"]
atlas = ExtResource("4_4o7c8")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqt4m"]
atlas = ExtResource("4_4o7c8")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjvfg"]
atlas = ExtResource("4_4o7c8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsnao"]
atlas = ExtResource("4_4o7c8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhdav"]
atlas = ExtResource("4_4o7c8")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dah5n"]
atlas = ExtResource("4_4o7c8")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iq01"]
atlas = ExtResource("4_4o7c8")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2jvu"]
atlas = ExtResource("4_4o7c8")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jukqq"]
atlas = ExtResource("4_4o7c8")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4vva"]
atlas = ExtResource("4_4o7c8")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qac1"]
atlas = ExtResource("3_5akqg")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt4ar"]
atlas = ExtResource("3_5akqg")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbsh"]
atlas = ExtResource("3_5akqg")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4k7s"]
atlas = ExtResource("3_5akqg")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4jrh"]
atlas = ExtResource("3_5akqg")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cfdy"]
atlas = ExtResource("3_5akqg")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pygqp"]
atlas = ExtResource("3_5akqg")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mow34"]
atlas = ExtResource("4_4o7c8")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lamxu"]
atlas = ExtResource("4_4o7c8")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma6wq"]
atlas = ExtResource("4_4o7c8")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k46qe"]
atlas = ExtResource("4_4o7c8")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuox4"]
atlas = ExtResource("4_4o7c8")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1jv8"]
atlas = ExtResource("4_4o7c8")
region = Rect2(32, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_htvwm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8ryd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5akqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ihxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o7c8")
}],
"loop": false,
"name": &"die",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynwyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf6lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqt4m")
}],
"loop": false,
"name": &"get_item",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjvfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsnao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhdav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dah5n")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iq01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2jvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jukqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4vva")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qac1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt4ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4k7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4jrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cfdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pygqp")
}],
"loop": false,
"name": &"knockback",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mow34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lamxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma6wq")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k46qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuox4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1jv8")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmvhq"]
size = Vector2(11.5, 12.2222)

[sub_resource type="CircleShape2D" id="CircleShape2D_yjlpd"]

[node name="Player" type="Node2D" node_paths=PackedStringArray("body", "anim", "hit_area", "hud", "label_coins", "armor_node", "armor_manager", "dash_audio", "heart_conteiner") groups=["player"]]
modulate = Color(1, 0.992157, 1, 1)
script = ExtResource("1_yjlpd")
body = NodePath("CharacterBody2D")
anim = NodePath("CharacterBody2D/AnimatedSprite2D")
hit_area = NodePath("CharacterBody2D/HitArea")
hud = NodePath("Hud")
label_coins = NodePath("Hud/Coins")
armor_node = NodePath("CharacterBody2D/Armors")
armor_manager = NodePath("ArmorManager")
dash_audio = NodePath("DashSound")
heart_conteiner = NodePath("Hud/HBoxContainer")

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(4, -2)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
texture_filter = 1
position = Vector2(1, -3)
scale = Vector2(1.125, 1.125)
sprite_frames = SubResource("SpriteFrames_htvwm")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(1, 0.500005)
scale = Vector2(0.9, 0.9)
shape = SubResource("RectangleShape2D_pmvhq")

[node name="HitArea" type="Area2D" parent="CharacterBody2D"]
position = Vector2(4, -5)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/HitArea"]
visibility_layer = 2
position = Vector2(-3, 2)
shape = SubResource("CircleShape2D_yjlpd")
debug_color = Color(0.992689, 0, 0.248493, 0.42)

[node name="GhostDashEffect" type="Node2D" parent="CharacterBody2D" node_paths=PackedStringArray("player")]
script = ExtResource("4_6ihxy")
player = NodePath("../..")

[node name="Armors" type="Node2D" parent="CharacterBody2D"]
position = Vector2(-4, 2)

[node name="Hud" type="CanvasLayer" parent="."]

[node name="Coins" type="Label" parent="Hud"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Hud"]
offset_right = 100.0
offset_bottom = 100.0

[node name="WearponsInfos" parent="." instance=ExtResource("6_4o7c8")]

[node name="ArmorManager" parent="." node_paths=PackedStringArray("player") instance=ExtResource("7_xjvfg")]
player = NodePath("..")

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_bsnao")

[connection signal="area_entered" from="CharacterBody2D/HitArea" to="." method="_kill_entered"]
[connection signal="body_entered" from="CharacterBody2D/HitArea" to="." method="_on_hit_area_body_entered"]
